--- a/.github/workflows/riscv64.yml
+++ b/.github/workflows/riscv64.yml
@@ -45,8 +45,8 @@ jobs:
 
       - name: Install Debian packages
         run: |
-          apt-get update
-          apt-get install -y build-essential qt5-qmake qtbase5-dev qtmultimedia5-dev libqt5svg5-dev qtscript5-dev rsync libusb-1.0-0-dev python3-dev libqt5serialport5-dev libudev-dev libqt5svg5-dev qtwayland5 qtbase5-private-dev qttools5-dev-tools
+          sudo apt-get update
+          sudo apt-get install -y build-essential qt5-qmake qtbase5-dev qtmultimedia5-dev libqt5svg5-dev qtscript5-dev rsync libusb-1.0-0-dev python3-dev libqt5serialport5-dev libudev-dev libqt5svg5-dev qtwayland5 qtbase5-private-dev qttools5-dev-tools
 
       - name: Configure git
         run: |
