--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ default:
     - apt-get install --yes build-essential qt5-qmake qtbase5-dev qtmultimedia5-dev
       libqt5svg5-dev qtscript5-dev rsync libusb-1.0-0-dev python3-dev
       libqt5serialport5-dev libudev-dev libqt5svg5-dev qtwayland5
-      qtbase5-private-dev qttools5-dev-tools
+      qtbase5-private-dev qttools5-dev-tools ccache
 
 build:
   stage: build
