--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ default:
   image: debian:sid
   before_script:
     - apt-get update --yes
-    - apt-get install --yes build-essential qt5-qmake qtbase5-dev qtmultimedia5-dev
+    - apt-get install --yes --no-install-recommends build-essential qt5-qmake qtbase5-dev qtmultimedia5-dev
       libqt5svg5-dev qtscript5-dev rsync libusb-1.0-0-dev python3-dev
       libqt5serialport5-dev libudev-dev libqt5svg5-dev qtwayland5
       qtbase5-private-dev qttools5-dev-tools ccache
@@ -10,6 +10,8 @@ default:
     - rsync --version
     - qmake --version && qmake -query
     - ccache --version
+    - gcc -v
+    - g++ -v
 
 build:
   stage: build
