--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
     - mkdir build
     - cd build
     - qmake CONFIG+=release CONFIG+=tests CONFIG+=noPch CONFIG+=ccache
-      CONFIG+=trik_not_brick CONFIG+=trik_nopython
+      CONFIG+=trik_nopython
       ..
     - make -j $(nproc) qmake_all
     - make -j $(nproc) all
